update content - 9/16 2abc5a4210d5 (add NULL handling in Remarks); camelcase

--- a/SDL_RectEmpty.mediawiki
+++ b/SDL_RectEmpty.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_RectEmpty =
 Use this function to check whether a rectangle has no area.
@@ -25,7 +25,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-If the rectangle defined by '''rect''' has a width or height <= 0 it has no area and this function returns SDL_TRUE.  If both width and height are > 0 the rectangle has area and this function returns SDL_FALSE.
+If the rectangle defined by '''rect''' is NULL or has a width or height <= 0 it has no area and this function returns SDL_TRUE.  If both width and height are > 0 the rectangle has area and this function returns SDL_FALSE.
 
 
 ----
