--- a/SDL_RectEquals.mediawiki
+++ b/SDL_RectEquals.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_RectEquals =
 Use this function to check whether two rectangles are equal.
@@ -29,7 +29,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This function compares the width, height, and location (X and Y) values for each of the two rectangles and returns SDL_TRUE if all corresponding values are equal.  If any value does not match it returns SDL_FALSE.
+This function compares the width, height, and location (X and Y) values for each of the two rectangles and returns SDL_TRUE if all corresponding values are equal.  If any value does not match or either rectangle is NULL it returns SDL_FALSE.
 
 ----
 [[CategoryAPI]], [[CategoryRect]]
