--- a/SDL_LogInfo.mediawiki
+++ b/SDL_LogInfo.mediawiki
@@ -25,13 +25,14 @@ void SDL_LogInfo(int         category,
 |additional parameters matching % tokens in the '''fmt''' string, if any
 |}
 
-
 == Code Examples ==
 ```c++
 You can add your code example here
 ```
 
 == Remarks ==
+<<Color2(green,Should there be some reference to [[SDL_LOG_CATEGORY]] for '''category'''?)>>
+
 ''You can add useful comments here''
 
 == Related Functions ==
@@ -43,7 +44,6 @@ You can add your code example here
 :[[SDL_LogMessageV]]
 :[[SDL_LogVerbose]]
 :[[SDL_LogWarn]]
-
 
 ----
 [[CategoryAPI]], [[CategoryBasics]]
