--- a/SDL_LogWarn.mediawiki
+++ b/SDL_LogWarn.mediawiki
@@ -31,6 +31,8 @@ You can add your code example here
 ```
 
 == Remarks ==
+<<Color2(green,Should there be some reference to [[SDL_LOG_CATEGORY]] for '''category'''?)>>
+
 ''You can add useful comments here''
 
 == Related Functions ==
