--- a/SDL_LogCritical.mediawiki
+++ b/SDL_LogCritical.mediawiki
@@ -46,4 +46,4 @@ You can add your code example here
 :[[SDL_LogWarn]]
 
 ----
-[[CategoryAPI]], [[CategoryBasics]]
+[[CategoryAPI]], [[CategoryLog]]
