--- a/SDL_LogMessage.mediawiki
+++ b/SDL_LogMessage.mediawiki
@@ -55,4 +55,4 @@ You can add your code example here
 :[[SDL_LogWarn]]
 
 ----
-[[CategoryAPI]], [[CategoryBasics]]
+[[CategoryAPI]], [[CategoryLog]]
