--- a/SDL_LogSetAllPriority.mediawiki
+++ b/SDL_LogSetAllPriority.mediawiki
@@ -32,4 +32,4 @@ You can add your code example here
 :[[SDL_LogSetPriority]]
 
 ----
-[[CategoryAPI]], [[CategoryBasics]]
+[[CategoryAPI]], [[CategoryLog]]
