update content - correct category name

--- a/SDL_LogSetOutputFunction.mediawiki
+++ b/SDL_LogSetOutputFunction.mediawiki
@@ -54,4 +54,4 @@ void* SDL_LogOutputFunction(void*           userdata,
 :[[SDL_LogGetOutputFunction]]
 
 ----
-[[CategoryAPI]], [[CategoryBasics]]
+[[CategoryAPI]], [[CategoryLog]]
