--- a/SDL_LogSetPriority.mediawiki
+++ b/SDL_LogSetPriority.mediawiki
@@ -42,4 +42,4 @@ You can add your code example here
 :[[SDL_LogSetAllPriority]]
 
 ----
-[[CategoryAPI]], [[CategoryBasics]]
+[[CategoryAPI]], [[CategoryLog]]
