update content - correct category name

--- a/SDL_LogWarn.mediawiki
+++ b/SDL_LogWarn.mediawiki
@@ -46,4 +46,4 @@ You can add your code example here
 :[[SDL_LogVerbose]]
 
 ----
-[[CategoryAPI]], [[CategoryBasics]]
+[[CategoryAPI]], [[CategoryLog]]
