--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -43,7 +43,8 @@ To help you with this we have created a series of resources:
  ||[http://wiki.libsdl.org/moin.cgi/SGCodeExamples Code Examples]||Adding Code Examples to any [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#api API page]||
  ||[http://wiki.libsdl.org/moin.cgi/SGRemarks Remarks]||Adding Remarks to any [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#api API page]||
  ||[http://wiki.libsdl.org/moin.cgi/SGTutorials Tutorials]||Adding an existing tutorial to the Tutorials page<br/>Creating a new tutorial within the wiki||
- ||[http://wiki.libsdl.org/moin.cgi/SGFunctions Function Pages]||Editing function pages<br/>~-This is supplemental to the Code Examples and Remarks Style Guides-~||
+ ||[http://wiki.libsdl.org/moin.cgi/SGFunctions Function Pages]||Editing Function pages<br/>Editing Macro pages<br/>~-This is supplemental to the Code Examples and Remarks Style Guides-~||
+<!-- # ||<:>''Coming Soon!''||Editing Structure pages<br/>Editing Union pages<br/>~-This is supplemental to the Code Examples and Remarks Style Guides-~|| -->
 
 : If you find something that is not addressed or is unclear in a style guide please post your questions using the ''Feedback'' form, the mailing list, or email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
