--- a/SGStructures.mediawiki
+++ b/SGStructures.mediawiki
@@ -17,7 +17,7 @@ This guide provides specific instructions for editing or adding your own content
 |}
 
 
-'''Please observe the following for all structure pages''':
+'''Please observe the following for all structure pages:'''
 * Do not post anything that you do not have permission to post publicly.
 
 * Sections should have adequate details to make them clear and useful while remaining brief wherever possible.  Code Examples and Remarks may be more extensive than other sections if necessary.
@@ -109,5 +109,23 @@ If you believe a change is necessary please submit ''Feedback'' from that page o
 ~-[[#ToC|Return to Table of Contents]]-~
 <br/>
 <br/>
-=== Syntax ===
-The Syntax section consists of
+=== Data Fields ===
+The Data Fields section provides basic information about each field in the structure and is presented in table format.
+
+'''The basic format is as follows:'''
+```
+||type||'''field1'''||description||
+||type||'''field2'''||description||
+...
+||type||'''fieldN'''||description||
+```
+
+''Markup'': Use [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Tables basic table markup] and enclose each field name in [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold] markup.
+
+* The __first column__ contains the field types and any pointers.
+* The __second column__ contains the field names, without types or pointers, in bold.
+* The __third column__ contains a simple description of each field using some specific formatting conventions.
+: ''<<Color2(red,Important!)>>'' All descriptions begin with a ''lower case'' letter, end ''without'' a period, and are generally ''not'' complete sentences.
+* There are a few content-dependent conventions we have chosen for consistency across pages - see the tables below for details. 
+
+''Example'': [[SDL_HapticCondition]]()
