--- a/SGStructures.mediawiki
+++ b/SGStructures.mediawiki
@@ -114,18 +114,42 @@ The Data Fields section provides basic information about each field in the struc
 
 '''The basic format is as follows:'''
 ```
-||type||'''field1'''||description||
-||type||'''field2'''||description||
+||type1||'''field1'''||description||
+||type2||'''field2'''||description||
 ...
-||type||'''fieldN'''||description||
+||typeN||'''fieldN'''||description||
 ```
 
 ''Markup'': Use [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Tables basic table markup] and enclose each field name in [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold] markup.
 
-* The __first column__ contains the field types and any pointers.
-* The __second column__ contains the field names, without types or pointers, in bold.
+* The __first column__ contains the field type and any pointers if applicable.
+* The __second column__ contains the field name, without types or pointers, in bold.
 * The __third column__ contains a simple description of each field using some specific formatting conventions.
 : ''<<Color2(red,Important!)>>'' All descriptions begin with a ''lower case'' letter, end ''without'' a period, and are generally ''not'' complete sentences.
 * There are a few content-dependent conventions we have chosen for consistency across pages - see the tables below for details. 
 
-''Example'': [[SDL_HapticCondition]]()
+''Example'': [[SDL_JoyButtonEvent]], [[SDL_HapticCondition]]
+
+{|
+|
+|<bgcolor="#EDEDED">''First Column (type)''
+|-
+|<( |2 30%>''If'' __another API page__ is referenced in the type column
+|''Action'': Be sure to [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink] it.
+|-
+|''Example'': [[SDL_Event]], [[SDL_AudioSpec]]
+|-
+|<( |2 30%>''If'' there is __a pointer__ associated with the field
+|''Action'': Place the pointer symbol(s) at the end of the type with no space between.
+|-
+|''Example'': [[SDL_Surface]]
+|}
+
+{|
+|
+|<bgcolor="#EDEDED">''Second Column (field)''
+|-
+|
+|<bgcolor="#EDEDED">''Third Column (description)''
+|}
+large remarks SDL_RendererInfo
