--- a/SDL_DollarGestureEvent.mediawiki
+++ b/SDL_DollarGestureEvent.mediawiki
@@ -42,6 +42,7 @@ A structure that contains ^complex gesture event information^???.
 |}
 
 <<Color2(green,Note that SDL_GestureID is not defined in this header.)>>
+<<Color2(green,Worth changing touchId and gestureId to touchID and gestureID for consistency?)>>
 
 == Code Examples ==
 ```c++
