--- a/SDL_KeyboardEvent.mediawiki
+++ b/SDL_KeyboardEvent.mediawiki
@@ -23,7 +23,7 @@ A structure that contains keyboard button event information.
 |'''repeat'''
 |non-zero if this is a key repeat
 |-
-|SDL_Keysym
+|[[SDL_Keysym]]
 |'''keysym'''
 |the [[SDL_Keysym]] representing the key that was pressed or released
 |}
